--- a/main.css
+++ b/main.css
@@ -379,24 +379,30 @@ text-decoration-style: none;
 
         }
         .home .logo h2{
-            width: 26.5%; 
+            width: 30.5%; 
             font-size: 10px;
             padding: 2px;
-            border: 1px  solid black;
+            border: 0.5px  solid black;
 
         }
         .img_large{
             height: 300px;
-            margin-top: 45px;
+            margin-top: 60px;
 
 
         }
         .line{
             justify-content: space-between;
+            margin-bottom: 70px;
 
         }
         .line input{
             width: 55%;
+
+
+        }
+        .final_img {
+            height: 250px;
 
 
         }
@@ -405,7 +411,19 @@ text-decoration-style: none;
 
         }
         .final_div{
-            height: 405px;
+            height: 425px;
+            margin-top: 40px;
+
+        }
+        .three_img{
+            margin-top: 150px;
+            margin-bottom: 80px;
+
+
+        }
+        .three_img .center_img button{
+            width: 60%;
+
 
         }
         
