--- a/main.css
+++ b/main.css
@@ -148,7 +148,9 @@ height: 100%;
 width: 100%;
 height: 200px;
 background-color: rgb(250, 250, 253);
-margin-top: 12px;
+margin-top: 50px;
+margin-bottom: 50px;
+
 display: flex;
 justify-content:space-around;
 
@@ -189,6 +191,7 @@ background-color: rgb(28, 36, 85);
 .line{
     width: 100%;
     height: 20px;
+    margin: 100px 0px;
 
 display: flex;
 color: rgb(37, 18, 59);
@@ -210,6 +213,7 @@ width:100% ;
 height:200px ;
 display: flex;
 margin-top: 20px;
+
 justify-content: space-between;
 
 
@@ -233,7 +237,7 @@ height: 70%;
    width: 100%;
    height: 200px;
   background: linear-gradient(black,rgb(22, 18, 27));
-margin-top: 20px;
+margin-top: 50px;
 display: flex;
 color: white;
 justify-content: space-around;
